--- a/CAJSBasic/LV2/index.html
+++ b/CAJSBasic/LV2/index.html
@@ -2,14 +2,15 @@
 <html lang="ko">
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- bootstrap lib -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <meta charset="UTF-8">
 
     <link rel="stylesheet" href="main.css">
     <title>Hello, world!</title>
 
+    <!-- JQuery lib -->
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous">
         </script>
@@ -18,7 +19,7 @@
 <body>
     <div class="black-bg" id="loginWindow">
         <div class="white-bg">
-            <h4>로그인하세요</h4>
+            <h4>로그인하세요(이메일형식)</h4>
             <form action="success.html">
                 <div class="my-3">
                     <input type="text" class="form-control" id="idtext">
@@ -53,19 +54,104 @@
         <h4>Shirts on Sale</h4>
         <button id="login" class="btn btn-danger">로그인</button>
     </div>
+    <div class="alert alert-danger">5초 이내 구매시 사은품 증정!</div>
 
-    <div class="alert alert-danger"> 사은품 증정!</div>
+    <div style="overflow: hidden;">
+        <div class="slide-container">
+            <div class="silide-box">
+                <img src="car1.png">
+            </div>
+            <div class="silide-box">
+                <img src="car2.png">
+            </div>
+            <div class="silide-box">
+                <img src="car3.png">
+            </div>
+        </div>
+    </div>
+    <button class="silde-1">1</button>
+    <button class="silde-2">2</button>
+    <button class="silde-3">3</button>
+    <button class="next">다음</button>
+    <button class="before">이전</button>
 
     <script>
-        setTimeout(function(){console.log('안녕')}, 5000)
-    </script>
+
+        var picCount = 0;
+        $('.next').on('click', function () {
+            if (picCount == 2) {
+                $('.slide-container').css('transform', 'translateX(0vw)');
+                picCount = 0;
+            } else {
+                picCount++;
+                $('.slide-container').css('transform', 'translateX(-' + picCount + '00vw)');
+            }
+        });
+
+            $('.before').on('click', function () {
+                if (picCount == 0) {
+                    picCount = 2;
+                    $('.slide-container').css('transform', 'translateX(-' + picCount + '00vw)');
+                } else {
+                    picCount--;
+                    $('.slide-container').css('transform', 'translateX(-' + picCount + '00vw)');
+                }
+            });
+
+        $('.silde-1').on('click', function () {
+            $('.slide-container').css('transform', 'translateX(0vw)');
+            picCount = 0;
+        });
+
+        $('.silde-2').on('click', function () {
+            $('.slide-container').css('transform', 'translateX(-100vw)');
+            picCount = 1;
+        });
+
+        $('.silde-3').on('click', function () {
+            $('.slide-container').css('transform', 'translateX(-200vw)');
+            picCount = 2
+        });
+
+        let countt = 5;
+        setInterval(function () {
+            document.getElementsByClassName('alert')[0].innerHTML = countt + "초 이내 구매시 사은품 증정!";
+            countt--;
+            if (countt < 0) {
+                $('.alert').hide();
+            }
+        }, 1000);
+
+        /* addEventListener(안녕); */
+
+        /*      setInterval(function () { $('.alert').hide(); }, 1000); */
+        /* setInterval(안녕, 1000); */
+        /*
+                function 안녕() {
+                    console.log('안녕');
+                } */
+
+        // 정규식
+
+        /* console.log(/[a-z]/.test('abc'));
+        console.log(/[A-Z]/.test('abc'));
+        console.log(/[ㄱ-ㅎ가-힣]/.test('예ㄹ'));
+        console.log(/[ㅏ-ㅣ]/.test('ㅗㅠ'));
+        console.log(/\S/.test('0')); // 특수기호 포함 */
 
 
+        /* console.log(/^a/.test('abc'));
+        console.log(/c$/.test('abc'));
+        console.log(/a|b/.test('abc'));
+        console.log(/a&d/.test('abc')); */
 
-    <script>
+        console.log(/\S+@\S+\.\S+/.test('aaa@bbb.ccc'));
+
+
         document.getElementsByClassName('navbar-toggler')[0].addEventListener('click', function () {
             document.getElementsByClassName('list-group')[0].classList.toggle('show');
         });
+
 
         $('#login').on('click', function () {
             $('.black-bg').addClass('show-modal');
@@ -74,22 +160,34 @@
             $('.black-bg').removeClass('show-modal');
         });
         document.querySelector('form').addEventListener('submit', function (e) {
+
+            let id = document.getElementById('idtext').value;
             let pw = document.getElementById('pwtext').value;
-            if (document.getElementById('idtext').value == '' && document.getElementById('pwtext').value == '') {
+
+            if (id == '' && pw == '') {
                 alert('아이디와 비밀번호를 입력하세요.')
                 e.preventDefault();
             } else {
-                if (document.getElementById('idtext').value == '') {
+                if (id == '') {
                     alert('아이디를 입력하세요.');
                     e.preventDefault();
                 }
-                if (document.getElementById('pwtext').value == '') {
-                    alert('비밀번호를 입력하세요.');
+                if (!/\S+@\S+.\S+/.test(id)) {
+                    alert('이메일 형식이 아닙니다.');
+                    e.preventDefault();
+                }
+                if (/[A-Z]/.test(pw)) {
+                    alert('비밀번호에 알파벳 대문자는 사용할 수 없습니다.')
                     e.preventDefault();
                 }
                 if (pw.length < 6) {
-                    alert('비밀번호를 6자리 이상 입력하여 주세요.')
-                    e.preventDefault();
+                    if (pw == '') {
+                        alert('비밀번호를 입력하세요.');
+                        e.preventDefault();
+                    } else {
+                        alert('비밀번호를 6자리 이상 입력하여 주세요.')
+                        e.preventDefault();
+                    }
                 }
             }
         });
