--- a/CAJSBasic/LV3/ajax.html
+++ b/CAJSBasic/LV3/ajax.html
@@ -82,6 +82,10 @@
         <button class="btn btn-danger" id="sixMan">6만원 이하 상품</button>
     </div>
 
+    <div class="container">
+        <button class="btn btn-danger" id="title">제목별 내림차순 정렬</button>
+    </div>
+
     <script>
 
         var products = [
@@ -104,6 +108,22 @@
             $('.row').html('');
             pricePrint();
         });
+
+        $('#title').click(function () {
+            products.sort(function (a, b) {
+                if (a.title > b.title) {
+                return -1;
+            } else if (a.title < b.title) {
+                return 1;
+            } else {
+                return 0;
+            }
+            });
+            console.log(products)
+            $('.row').html('');
+            pricePrint();
+        });
+
         $('#sixMan').click(function () {
             let newProduce = products.filter(function (a) {
                 return a.price <= 60000;
@@ -117,6 +137,7 @@
                     <img src="https://via.placeholder.com/600" class="w-100">
                     <h5>${a.title}</h5>
                     <p>가격 : ${a.price}</p>
+                    <button class = "btn btn-danger">구매</button>
                 </div>`
                 );
             });
@@ -159,25 +180,53 @@
         array2.sort(function (a, b) {
             if (a > b) {
                 return -1;
+            } else if (a < b) {
+                return 1;
             } else {
                 return 0;
             }
         }
 
         );
+
+        
+
         console.log(array2)
         pricePrint();
         function pricePrint() {
             products.forEach(function (a) {
                 //forEach(function('배열값 파라미터', '인덱스(=생략가능)')
-                $('.row').eq(0).append(
-                    `<div class="col-sm-4">
+                var temp =`<div class="col-sm-4">
                     <img src="https://via.placeholder.com/600" class="w-100">
                     <h5>${a.title}</h5>
                     <p>가격 : ${a.price}</p>
-                </div>`
-                );
+                    <button class = "btn btn-danger">구매</button>
+                </div>`;
+                $('.row').eq(0).append(temp);
             });
+
+            // localStorage.
+
+            /* localStorage.setItem('이름','kim');
+            localStorage.getItem('이름');
+            localStorage.removeItem('이름'); */
+
+            var arr = [1,2,3];
+
+            var newArr = JSON.stringify(arr);
+
+            localStorage.setItem('num', newArr);
+            var open = localStorage.getItem('num')
+            JSON.parse(open)
+            console.log(JSON.parse(open))
+            console.log(JSON.parse(open[1]))
+
+            // sessionStorage 동일
+
+            // update - 기능 X
+            // 1. 꺼냄
+            // 2. 꺼낸거 수정
+            // 3. 다시넣음
 
         }
 
@@ -212,6 +261,7 @@
                                     <img src="https://via.placeholder.com/600" class="w-100">
                                     <h5>${a.title}</h5>
                                     <p>가격 : ${a.price}</p>
+                                    <button class = "btn btn-danger">구매</button>
                                 </div>`
                     );
                 });
